[project]
name = "cloud-iam-posture-gym"
version = "0.1.0"
description = "Cloud IAM Security Posture Gym for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "openai",
    "pydantic",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:run"